log
Fri May  6 15:14:41 UTC 2022: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
9fdfa39
Fri May  6 15:15:10 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
b2d8f68
Fri May  6 15:15:30 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
72c79e3
Fri May  6 15:16:51 UTC 2022: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
f8f1f7f
Fri May  6 15:17:12 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
32593c3
Fri May  6 15:23:48 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
12c1d8e
Fri May  6 15:24:22 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
de77042
Fri May  6 15:25:27 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
d34d22e
Fri May  6 15:32:23 UTC 2022: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
6cd04c1
Fri May  6 15:33:01 UTC 2022: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
0a53b44
Fri May  6 15:33:53 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
1d41109
Fri May  6 15:34:15 UTC 2022: 
 heap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  2|2
total_score: 20/70
a841cb6
Fri May  6 15:51:25 UTC 2022: 
 heap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘heap_push’:
heap.c:50:12: error: ‘auxPQ’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       auxPQ->heapArray[0].data = pq->heapArray[padre].data;
       ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e00ed06
Fri May  6 15:53:09 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
test.c: In function ‘heap_push’:
heap.c:50:12: error: ‘auxPQ’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       auxPQ->heapArray[0].data = pq->heapArray[padre].data;
       ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
15e8418
Fri May  6 15:53:30 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘heap_push’:
heap.c:50:12: error: ‘auxPQ’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       auxPQ->heapArray[0].data = pq->heapArray[padre].data;
       ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
01acb8e
Fri May  6 15:54:08 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘heap_push’:
heap.c:50:12: error: ‘auxPQ’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       auxPQ->heapArray[0].data = pq->heapArray[padre].data;
       ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0e54cec
Fri May  6 15:56:19 UTC 2022: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘heap_push’:
heap.c:50:12: error: ‘auxPQ’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       auxPQ->heapArray[0].data = pq->heapArray[padre].data;
       ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
090f0fe
Fri May  6 15:59:09 UTC 2022: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘heap_push’:
heap.c:50:12: error: ‘auxPQ’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       auxPQ->heapArray[0].data = pq->heapArray[padre].data;
       ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8d590b4
Fri May  6 15:59:43 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:49:40: error: expected ‘)’ before ‘;’ token
       Heap *auxPQ = malloc(sizeof(Heap);
                                        ^
heap.c:58:5: error: expected ‘,’ or ‘;’ before ‘}’ token
     }
     ^
heap.c:59:5: error: expected ‘}’ before ‘else’
     else break;
     ^~~~
heap.c:49:13: error: unused variable ‘auxPQ’ [-Werror=unused-variable]
       Heap *auxPQ = malloc(sizeof(Heap);
             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
9819b28
Fri May  6 15:59:52 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
abc706d
Fri May  6 16:00:35 UTC 2022: 
 heap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  2|2
total_score: 20/70
b968b0e
Fri May  6 16:01:59 UTC 2022: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
7ae895e
Fri May  6 16:06:08 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
3a7dca3
Fri May  6 16:07:07 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
7ec5fa1
vi.,  6 de may. de 2022 17:03:08: 
 tests:  3|3
total_score: 20/70
bc0f166
vi.,  6 de may. de 2022 17:05:52: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 20/70
f92a53f
vi.,  6 de may. de 2022 17:06:27: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|3
total_score: 20/70
b5884b0
vi.,  6 de may. de 2022 17:06:50: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cce8e8a
vi.,  6 de may. de 2022 17:09:09: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
67d76d3
vi.,  6 de may. de 2022 17:09:31: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 25/70
63f3bf6
vi.,  6 de may. de 2022 17:11:00: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|2
total_score: 35/70
681bdf9
